argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ui-service
  namespace: team-backend-team
  labels:
    app: backend-ui
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: backend-ui
