argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ui-ingress
  namespace: team-backend-team
spec:
  ingressClassName: nginx
  rules:
  - host: backend-ui.fd60-627a-a42b-42d3-861a-6987-3179-4d87.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-ui-service
            port:
              number: 80
